# rat

./: CLAUDE.md  Makefile  README.md  pyproject.toml
agent/: setup-zrok-jumphost.sh  setup-zrok-ssh.sh  zrok-health-check.sh
rat/: __init__.py  cli.py  config.py  tunnel.py
rat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_config.py  test_tunnel.py
